--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <title>Document</title>
     </head>
     <body>
-        <header></header>
+        <header>The Ultimate Guide to Lord of the Rings</header>
+        <p>If you are a Lord of the Rings fanatic welcome to the best page page for lord of rings!</p>
         <main>
             The Fellowship of the Ring, The Two Towers, The Return of the King
             <!-- Start of the table task -->
