Added Navbar with links

--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
         <title>Document</title>
     </head>
     <body>
-        <header></header>
+        <header>
+            <!--Nav Bar-->
+            <nav>
+                <ul>
+                    <li><a href="#">MORNING GLORY</a></li>
+                    <li><a href="#">ABOUT</a></li>
+                    <li><a href="#">SERVICES</a></li>
+                </ul>
+            </nav>
+        </header>
         <main>
             The Fellowship of the Ring, The Two Towers, The Return of the King
             <!-- Start of the table task -->
