books sorted into a ordered list.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <body>
         <header></header>
         <main>
-            The Fellowship of the Ring, The Two Towers, The Return of the King
+            <ol>
+                <li>The Fellowship of the Ring</li>
+                <li>The Two Towers</li>
+                <li>The Return of the King</li>
+            </ol>
+            
             <!-- Start of the table task -->
             <!-- Convert the following text into a proper table -->
             <!-- Remember to use table container, table header, table body and other proper and semantic elements like th, td, and tr. Optionally, you can add a table caption. -->
