--- a/index.html
+++ b/index.html
@@ -3,19 +3,10 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Morning Glory</title>
+        <title>Document</title>
     </head>
     <body>
-        <header>
-            <!--Nav Bar-->
-            <nav>
-                <ul>
-                    <li><a href="#">MORNING GLORY</a></li>
-                    <li><a href="#">ABOUT</a></li>
-                    <li><a href="#">SERVICES</a></li>
-                </ul>
-            </nav>
-        </header>
+        <header></header>
         <main>
             The Fellowship of the Ring, The Two Towers, The Return of the King
             <!-- Start of the table task -->
@@ -67,7 +58,7 @@
                     <input type="radio" name="elf" id="elf" />
                     <label for="elf">Elf</label>
                 </fieldset>
-                <button> Submit </button>
+                <input type="button" value="Submit" />
             </form>
         </main>
         <footer>
