--- a/morningGlory.html
+++ b/morningGlory.html
@@ -9,5 +9,8 @@
     <header>
         <h1> Morning Glory </h1>
     </header>
+    <h2> Jeffrey </h2>
+    <p>Hello, my name is Jeffrey. I was born in Queens, NY but currently reside in Brooklyn. I am big baseball fan, Lets go Mets!</p>
+
 </body>
 </html>
