--- a/morningGlory.html
+++ b/morningGlory.html
@@ -9,5 +9,10 @@
     <header>
         <h1> Morning Glory </h1>
     </header>
+<section>
+    <h3>Pandora</h3>
+    <p>I am a lover of all things animated. Between that and slinging drinks at my job I also love creating new cocktails, traveling and playing DDR! </p>
+</section>
+    
 </body>
 </html>
