updated index and fixed bug 12

--- a/morningGlory.html
+++ b/morningGlory.html
@@ -10,4 +10,10 @@
         <h1> Morning Glory </h1>
     </header>
 </body>
+<body> 
+    <header>
+        <h2> A little about Anj</h2>
+    </header>
+    <p> Im 31 years old, originally from VA but currently residing in FL with my 3 kids and 2 furbabies. I enjoy art, DIY projects, cooking, and puzzles. I graduated with my BS from Penn State in Marketing and Management where I worked in various industries including healthcare, finance, enviornmental consulting and big pharma but fell in love with tech. I've been tech adjacent am finally ready to tackle the tech world and code!</p>
+</body>
 </html>
